--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+    <item android:title="Список рецептов"
+        android:id="@+id/Spisok"
+        android:icon="@drawable/spisok_receipt"
+        android:color="#54A642"/>
+    <item android:title="Текущий рецепт"
+        android:id="@+id/Now"
+        android:icon="@drawable/food"
+        android:color="#54A642"/>
+    <item android:title="Любимые рецепты"
+        android:id="@+id/Favorite"
+        android:icon="@drawable/favorite"
+        android:color="#54A642"/>
 
 </menu>
