--- a/app/src/main/res/layout/fragment_recipe_now.xml
+++ b/app/src/main/res/layout/fragment_recipe_now.xml
@@ -7,8 +7,13 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/TextRecipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
