--- a/app/src/main/res/layout/recipe.xml
+++ b/app/src/main/res/layout/recipe.xml
@@ -23,18 +23,26 @@
             android:layout_height="match_parent"
             android:background="@drawable/custom_input">
 
-            <ImageView
-                android:id="@+id/imageRecipe"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/imageCard"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                app:cardCornerRadius="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/NameRecipe"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/buttonback" />
+                app:layout_constraintTop_toTopOf="parent" >
+
+                <ImageView
+                    android:id="@+id/imageRecipe"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/buttonback" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/NameRecipe"
@@ -50,7 +58,7 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageRecipe"
+                app:layout_constraintStart_toEndOf="@+id/imageCard"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
