--- a/app/src/main/res/layout/fragment_recipe_now.xml
+++ b/app/src/main/res/layout/fragment_recipe_now.xml
@@ -5,15 +5,55 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.Recipe_now">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/TextRecipe"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="30sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/Time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:textAlignment="textEnd" />
+
+        <TextView
+            android:id="@+id/Difficalty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            android:textAlignment="textEnd" />
+
+        <TextView
+            android:id="@+id/Calory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            android:textAlignment="textEnd" />
+
+        <TextView
+            android:id="@+id/Ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="19sp"
+            android:textColor="@color/black"/>
+    </LinearLayout>
 </FrameLayout>
