--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -103,7 +103,6 @@
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <EditText
         android:id="@+id/textEmail"
         android:layout_width="match_parent"
@@ -134,14 +133,32 @@
         android:text=""
         android:textColorHint="@color/black" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonExit"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/buttonback"
-        android:text="Войти"
-        android:textColor="@color/white" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonExit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/buttonback"
+            android:text="Войти"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonReg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/buttonback"
+            android:text="Зарегистрироваться"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
 </LinearLayout>
