--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -138,14 +138,27 @@
         android:id="@+id/buttonExit"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="30dp"
         android:background="@drawable/buttonback"
         android:text="Войти"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/buttonReg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPassword" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonReg"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/buttonback"
+        android:text="Зарегистрироваться"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonExit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
